force-app/main/default/objects/OPP_Case_Line_Items__c.object
<CustomObject>
    <fields>
        <fullName>Actual_Software_Version__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Actual Software Version</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>OPP_Software_Asset__c.Is_Parent_Software__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <filterItems>
                <field>OPP_Software_Asset__c.Parent_Software__r.Id</field>
                <operation>equals</operation>
                <valueField>$Source.OPP_Software_Asset__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>OPP_Software_Asset__c</referenceTo>
        <relationshipLabel>Request Items (Actual Software Version)</relationshipLabel>
        <relationshipName>Request_Items1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Actual_Version__c</fullName>
        <formula>Actual_Software_Version__r.CHILDSOFTWAREVERSION__c</formula>
        <label>Actual Version</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Asset_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Target User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>OPP_Case_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Authority_Request__c</fullName>
        <label>Authority Request</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>User Account</fullName>
                </value>
                <value>
                    <fullName>User Account + Email</fullName>
                </value>
                <value>
                    <fullName>Intranet Access</fullName>
                </value>
                <value>
                    <fullName>Enable LAN Port</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Internet Access</fullName>
                </value>
                <value>
                    <fullName>VPN</fullName>
                </value>
                <value>
                    <fullName>Ariba</fullName>
                </value>
                <value>
                    <fullName>TOP Space</fullName>
                </value>
                <value>
                    <fullName>SAP</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>CIP</fullName>
                    <isActive>false</isActive>
                    <label>CIP</label>
                </value>
                <value>
                    <fullName>IT-Asset</fullName>
                    <isActive>false</isActive>
                    <label>IT-Asset</label>
                </value>
                <value>
                    <fullName>InternetMail</fullName>
                    <isActive>false</isActive>
                    <label>InternetMail</label>
                </value>
                <value>
                    <fullName>LIMs</fullName>
                    <isActive>false</isActive>
                    <label>LIMs</label>
                </value>
                <value>
                    <fullName>LIS</fullName>
                    <isActive>false</isActive>
                    <label>LIS</label>
                </value>
                <value>
                    <fullName>ORTL</fullName>
                    <isActive>false</isActive>
                    <label>ORTL</label>
                </value>
                <value>
                    <fullName>OilSystem</fullName>
                    <isActive>false</isActive>
                    <label>OilSystem</label>
                </value>
                <value>
                    <fullName>PHA</fullName>
                    <isActive>false</isActive>
                    <label>PHA</label>
                </value>
                <value>
                    <fullName>RMIS</fullName>
                    <isActive>false</isActive>
                    <label>RMIS</label>
                </value>
                <value>
                    <fullName>WIFI(BYOD)</fullName>
                    <isActive>false</isActive>
                    <label>WIFI(BYOD)</label>
                </value>
                <value>
                    <fullName>WebMail</fullName>
                    <isActive>false</isActive>
                    <label>WebMail</label>
                </value>
                <value>
                    <fullName>i-Care</fullName>
                    <isActive>false</isActive>
                    <label>i-Care</label>
                </value>
                <value>
                    <fullName>i-Link</fullName>
                    <isActive>false</isActive>
                    <label>i-Link</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Request Items</relationshipLabel>
        <relationshipName>OPP_case_line_items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Child_Version__c</fullName>
        <label>Child Version</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Version A</fullName>
                </value>
                <value>
                    <fullName>Version B</fullName>
                </value>
                <value>
                    <fullName>Version C</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ACVP</fullName>
                </value>
                <value>
                    <fullName>ADVP</fullName>
                </value>
                <value>
                    <fullName>BDVP</fullName>
                </value>
                <value>
                    <fullName>CAVP</fullName>
                </value>
                <value>
                    <fullName>CMVP</fullName>
                </value>
                <value>
                    <fullName>COMG</fullName>
                </value>
                <value>
                    <fullName>CPVP</fullName>
                </value>
                <value>
                    <fullName>CRVP</fullName>
                </value>
                <value>
                    <fullName>CSMG</fullName>
                </value>
                <value>
                    <fullName>CTVP</fullName>
                </value>
                <value>
                    <fullName>DGVP</fullName>
                </value>
                <value>
                    <fullName>EMMG</fullName>
                </value>
                <value>
                    <fullName>ENVP</fullName>
                </value>
                <value>
                    <fullName>EOVP</fullName>
                </value>
                <value>
                    <fullName>FPVP</fullName>
                </value>
                <value>
                    <fullName>GLVP</fullName>
                </value>
                <value>
                    <fullName>GSVP</fullName>
                </value>
                <value>
                    <fullName>IAVP</fullName>
                </value>
                <value>
                    <fullName>MGT-SA</fullName>
                </value>
                <value>
                    <fullName>MMVP</fullName>
                </value>
                <value>
                    <fullName>MPVP</fullName>
                </value>
                <value>
                    <fullName>MRVP</fullName>
                </value>
                <value>
                    <fullName>NBVP</fullName>
                </value>
                <value>
                    <fullName>PCVP</fullName>
                </value>
                <value>
                    <fullName>PEVP</fullName>
                </value>
                <value>
                    <fullName>PMVP</fullName>
                </value>
                <value>
                    <fullName>POMG</fullName>
                </value>
                <value>
                    <fullName>PRMG</fullName>
                </value>
                <value>
                    <fullName>PTMG</fullName>
                </value>
                <value>
                    <fullName>QMVP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Detail__c</fullName>
        <label>Detail</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Full_Name__c</fullName>
        <label>Full Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hardware_Item__c</fullName>
        <label>Hardware Item</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Computer</fullName>
                </value>
                <value>
                    <fullName>Notebook</fullName>
                </value>
                <value>
                    <fullName>Monitor</fullName>
                </value>
                <value>
                    <fullName>Access Data Center Switch</fullName>
                    <isActive>false</isActive>
                    <label>Access Data Center Switch</label>
                </value>
                <value>
                    <fullName>Access Switch</fullName>
                    <isActive>false</isActive>
                    <label>Access Switch</label>
                </value>
                <value>
                    <fullName>Adapter</fullName>
                    <isActive>false</isActive>
                    <label>Adapter</label>
                </value>
                <value>
                    <fullName>Camera</fullName>
                    <isActive>false</isActive>
                    <label>Camera</label>
                </value>
                <value>
                    <fullName>Core Data Center Switch</fullName>
                    <isActive>false</isActive>
                    <label>Core Data Center Switch</label>
                </value>
                <value>
                    <fullName>Distribution Switch</fullName>
                    <isActive>false</isActive>
                    <label>Distribution Switch</label>
                </value>
                <value>
                    <fullName>Firewall</fullName>
                    <isActive>false</isActive>
                    <label>Firewall</label>
                </value>
                <value>
                    <fullName>Keyboard</fullName>
                    <isActive>false</isActive>
                    <label>Keyboard</label>
                </value>
                <value>
                    <fullName>LTE 4G Router</fullName>
                    <isActive>false</isActive>
                    <label>LTE 4G Router</label>
                </value>
                <value>
                    <fullName>Load Balance</fullName>
                    <isActive>false</isActive>
                    <label>Load Balance</label>
                </value>
                <value>
                    <fullName>Printer</fullName>
                    <isActive>false</isActive>
                    <label>Printer</label>
                </value>
                <value>
                    <fullName>Router</fullName>
                    <isActive>false</isActive>
                    <label>Router</label>
                </value>
                <value>
                    <fullName>Security</fullName>
                    <isActive>false</isActive>
                    <label>Security</label>
                </value>
                <value>
                    <fullName>Server</fullName>
                    <isActive>false</isActive>
                    <label>Server</label>
                </value>
                <value>
                    <fullName>Smart Keyboard</fullName>
                    <isActive>false</isActive>
                    <label>Smart Keyboard</label>
                </value>
                <value>
                    <fullName>SmartPhone</fullName>
                    <isActive>false</isActive>
                    <label>SmartPhone</label>
                </value>
                <value>
                    <fullName>Stylus Pen</fullName>
                    <isActive>false</isActive>
                    <label>Stylus Pen</label>
                </value>
                <value>
                    <fullName>Tablet</fullName>
                    <isActive>false</isActive>
                    <label>Tablet</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hardware_Other__c</fullName>
        <label>Hardware Other</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Incident_Item__c</fullName>
        <label>Incident Item</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PC</fullName>
                </value>
                <value>
                    <fullName>Network</fullName>
                </value>
                <value>
                    <fullName>Telecom</fullName>
                </value>
                <value>
                    <fullName>VDO Conference</fullName>
                </value>
                <value>
                    <fullName>App</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IsForceChange__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsForceChange</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Summited_PMAsset__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Summited PMAsset</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_WinNo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>New Hardware to Install (WinNo)</label>
        <referenceTo>OPP_IT_Asset__c</referenceTo>
        <relationshipLabel>Request Items (New Hardware to Install (WinNo))</relationshipLabel>
        <relationshipName>Request_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OPP_IT_Asset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Existing IT Asset owner</description>
        <label>Hardware to install (WinNo)</label>
        <referenceTo>OPP_IT_Asset__c</referenceTo>
        <relationshipLabel>Request Items (Hardware to install (WinNo))</relationshipLabel>
        <relationshipName>OPP_Case_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OPP_Software_Asset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Software Name</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>OPP_Software_Asset__c.Is_Parent_Software__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>OPP_Software_Asset__c.IsDelete_By_PM_Asset__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>OPP_Software_Asset__c</referenceTo>
        <relationshipLabel>Request Items (Software Name)</relationshipLabel>
        <relationshipName>OPP_Case_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Price_Per_Unit__c</fullName>
        <label>Price Per Unit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Response_PM_Asset__c</fullName>
        <label>Response PM Asset</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Software_Name_ChildVersion__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Software Name Version</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>OPP_Software_Asset__c.Is_Parent_Software__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <filterItems>
                <field>OPP_Software_Asset__c.Parent_Software__r.Id</field>
                <operation>equals</operation>
                <valueField>$Source.OPP_Software_Asset__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>OPP_Software_Asset__c</referenceTo>
        <relationshipLabel>Request Items (Software Name Version)</relationshipLabel>
        <relationshipName>Request_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Software_Other__c</fullName>
        <label>Software Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Software_Type__c</fullName>
        <label>Software Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Software_Version__c</fullName>
        <formula>Software_Name_ChildVersion__r.CHILDSOFTWAREVERSION__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Software Version (If Any)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Software_Version_for_Others__c</fullName>
        <label>Software Version for Others</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stationery_Item__c</fullName>
        <label>Accessory Item</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DeskjestPlus 4120/4121/4122 : 67A (Black)</fullName>
                </value>
                <value>
                    <fullName>DeskjestPlus 4120/4121/4122 : 67A (Tri-color)</fullName>
                </value>
                <value>
                    <fullName>Laserjet CF248A : 48A (Black)</fullName>
                </value>
                <value>
                    <fullName>Fujitsu DL 3800/9400 : Black</fullName>
                </value>
                <value>
                    <fullName>Fuji Xerox Apeosport C66880/6685 :CT201586 (Black)</fullName>
                </value>
                <value>
                    <fullName>Fuji Xerox Apeosport C66880/6685 :CT201587 (Cyan)</fullName>
                </value>
                <value>
                    <fullName>Fuji Xerox Apeosport C66880/6685 :CT201588 (Megenta)</fullName>
                </value>
                <value>
                    <fullName>Fuji Xerox Apeosport C66880/6685 :CT201589 Yellow)</fullName>
                </value>
                <value>
                    <fullName>Fuji Xerox Apeosport 3560-v1860/2560/3060 :CT205208 (Black)</fullName>
                </value>
                <value>
                    <fullName>Fuji Xerox Apeosport C3070 :CT202634 (Black)</fullName>
                </value>
                <value>
                    <fullName>Fuji Xerox Apeosport C3070 :CT202635 (Cyan)</fullName>
                </value>
                <value>
                    <fullName>Fuji Xerox Apeosport C3070 :CT202636 (Meaenta)</fullName>
                </value>
                <value>
                    <fullName>Fuji Xerox Apeosport C3070 :CT202637 (Yellow)</fullName>
                </value>
                <value>
                    <fullName>Fuji Xerox Apeosport 3560-v1860/2560/3060 :CT351089 (Drum Cartidge)</fullName>
                </value>
                <value>
                    <fullName>Fuji Xerox Apeosport C3070 :CT351105 (Drum Cartidge)</fullName>
                </value>
                <value>
                    <fullName>Fuji Xerox Apeosport C3070 :CWAA0901 (Waste Toner Container)</fullName>
                </value>
                <value>
                    <fullName>แผ่นรองเม้าส์</fullName>
                </value>
                <value>
                    <fullName>DVD-R</fullName>
                </value>
                <value>
                    <fullName>CDR</fullName>
                </value>
                <value>
                    <fullName>Toner Leser Jet Pro 200 color 125 A (Black)</fullName>
                </value>
                <value>
                    <fullName>Toner Leser Jet Pro 200 color 125 A (Megenta)</fullName>
                </value>
                <value>
                    <fullName>Toner Leser Jet Pro 200 color  125 A (Cyan)</fullName>
                </value>
                <value>
                    <fullName>Toner Leser Jet Pro 200 color  125 A (Yellow)</fullName>
                </value>
                <value>
                    <fullName>Toner Leser Jet Pro 200 color M251/M276: 131 A (Black)</fullName>
                </value>
                <value>
                    <fullName>Toner Leser Jet Pro 200 color M251/M276: 131 A (Megenta)</fullName>
                </value>
                <value>
                    <fullName>Toner Leser Jet Pro 200 color M251/M276: 131 A (Cyan)</fullName>
                </value>
                <value>
                    <fullName>Toner Leser Jet Pro 200 color M251/M276: 131 A (Yellow)</fullName>
                </value>
                <value>
                    <fullName>Toner Leser Jet Pro 218 (Black)</fullName>
                </value>
                <value>
                    <fullName>Toner Leser Jet Pro 218 (Megenta)</fullName>
                </value>
                <value>
                    <fullName>Toner Leser Jet Pro 218 (Cyan)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Stationery_Other__c</fullName>
        <label>Accessory Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>standardSoftwarePrice__c</fullName>
        <formula>IF(ISBLANK( OPP_Software_Asset__r.LASTESTUNITPRICE__c ), &apos;ไม่พบราคาจากระบบ Digital Asset&apos;, TEXT(OPP_Software_Asset__r.LASTESTUNITPRICE__c)+&apos; &apos;+ TEXT( OPP_Software_Asset__r.LASTESTUNITPRICECURR__c ))</formula>
        <label>Price Per Unit</label>
        <type>Text</type>
    </fields>
    <label>Request Items</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>OPP Case Line Items Name</label>
        <type>AutoNumber</type>
    </nameField>
    <recordTypes>
        <fullName>Authorization_Application</fullName>
        <active>true</active>
        <label>Authorization - Application</label>
    </recordTypes>
    <recordTypes>
        <fullName>Authorization_IT_Infrastructure</fullName>
        <active>true</active>
        <label>Authorization - IT Infrastructure</label>
    </recordTypes>
    <recordTypes>
        <fullName>Authorization_IT_Infrastructure_Special</fullName>
        <active>true</active>
        <label>Authorization - IT Infrastructure (Special)</label>
    </recordTypes>
    <recordTypes>
        <fullName>Authorization_SAP_Account</fullName>
        <active>true</active>
        <label>Authorization - SAP Account</label>
    </recordTypes>
    <recordTypes>
        <fullName>Hardware_Catalog</fullName>
        <active>true</active>
        <label>Hardware - Catalog</label>
    </recordTypes>
    <recordTypes>
        <fullName>Hardware_Non_Catalog</fullName>
        <active>true</active>
        <label>Hardware - Non Catalog</label>
    </recordTypes>
    <recordTypes>
        <fullName>IT_Stationery_Catalog</fullName>
        <active>true</active>
        <label>IT Stationery - Catalog</label>
    </recordTypes>
    <recordTypes>
        <fullName>IT_Stationery_Non_Catalog</fullName>
        <active>true</active>
        <label>IT Stationery - Non Catalog</label>
    </recordTypes>
    <recordTypes>
        <fullName>Incident</fullName>
        <active>true</active>
        <label>Incident</label>
    </recordTypes>
    <recordTypes>
        <fullName>Others</fullName>
        <active>true</active>
        <label>Others</label>
    </recordTypes>
    <recordTypes>
        <fullName>Project_Request</fullName>
        <active>true</active>
        <label>Project Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>SectHead_AUTH_APP</fullName>
        <active>true</active>
        <label>SectHead-AUTH-APP</label>
    </recordTypes>
    <recordTypes>
        <fullName>SectHead_AUTH_INFRA</fullName>
        <active>true</active>
        <label>SectHead-AUTH-INFRA</label>
    </recordTypes>
    <recordTypes>
        <fullName>SectHead_AUTH_INFRA_SPE</fullName>
        <active>true</active>
        <label>SectHead-AUTH-INFRA-SPE</label>
    </recordTypes>
    <recordTypes>
        <fullName>SectHead_AUTH_SAP</fullName>
        <active>true</active>
        <label>SectHead-AUTH-SAP</label>
    </recordTypes>
    <recordTypes>
        <fullName>SectHead_HW</fullName>
        <active>true</active>
        <label>SectHead-HW</label>
    </recordTypes>
    <recordTypes>
        <fullName>SectHead_HW_NON</fullName>
        <active>true</active>
        <label>SectHead-HW-NON</label>
    </recordTypes>
    <recordTypes>
        <fullName>SectHead_PROJ</fullName>
        <active>true</active>
        <label>SectHead-PROJ</label>
    </recordTypes>
    <recordTypes>
        <fullName>SectHead_STAT</fullName>
        <active>true</active>
        <label>SectHead-STAT</label>
    </recordTypes>
    <recordTypes>
        <fullName>SectHead_STAT_NON</fullName>
        <active>true</active>
        <label>SectHead-STAT-NON</label>
    </recordTypes>
    <recordTypes>
        <fullName>SectHead_SW</fullName>
        <active>true</active>
        <label>SectHead-SW</label>
    </recordTypes>
    <recordTypes>
        <fullName>SectHead_SW_NON</fullName>
        <active>true</active>
        <label>SectHead-SW-NON</label>
    </recordTypes>
    <recordTypes>
        <fullName>Software_Catalog</fullName>
        <active>true</active>
        <label>Software - Catalog</label>
    </recordTypes>
    <recordTypes>
        <fullName>Software_Non_Catalog</fullName>
        <active>true</active>
        <label>Software - Non Catalog</label>
    </recordTypes>
    <recordTypes>
        <fullName>Staff_AUTH_APP</fullName>
        <active>true</active>
        <label>Staff-AUTH-APP</label>
    </recordTypes>
    <recordTypes>
        <fullName>Staff_AUTH_INFRA</fullName>
        <active>true</active>
        <label>Staff-AUTH-INFRA</label>
    </recordTypes>
    <recordTypes>
        <fullName>Staff_AUTH_INFRA_SPE</fullName>
        <active>true</active>
        <label>Staff-AUTH-INFRA-SPE</label>
    </recordTypes>
    <recordTypes>
        <fullName>Staff_AUTH_SAP</fullName>
        <active>true</active>
        <label>Staff-AUTH-SAP</label>
    </recordTypes>
    <recordTypes>
        <fullName>Staff_HW</fullName>
        <active>true</active>
        <label>Staff-HW</label>
    </recordTypes>
    <recordTypes>
        <fullName>Staff_HW_NON</fullName>
        <active>true</active>
        <label>Staff-HW-NON</label>
    </recordTypes>
    <recordTypes>
        <fullName>Staff_PROJ</fullName>
        <active>true</active>
        <label>Staff-PROJ</label>
    </recordTypes>
    <recordTypes>
        <fullName>Staff_STAT</fullName>
        <active>true</active>
        <label>Staff-STAT</label>
    </recordTypes>
    <recordTypes>
        <fullName>Staff_STAT_NON</fullName>
        <active>true</active>
        <label>Staff-STAT-NON</label>
    </recordTypes>
    <recordTypes>
        <fullName>Staff_SW</fullName>
        <active>true</active>
        <label>Staff-SW</label>
    </recordTypes>
    <recordTypes>
        <fullName>Staff_SW_NON</fullName>
        <active>true</active>
        <label>Staff-SW-NON</label>
    </recordTypes>
    <recordTypes>
        <fullName>VP_AUTH_APP</fullName>
        <active>true</active>
        <label>VP-AUTH-APP</label>
    </recordTypes>
    <recordTypes>
        <fullName>VP_AUTH_INFRA</fullName>
        <active>true</active>
        <label>VP-AUTH-INFRA</label>
    </recordTypes>
    <recordTypes>
        <fullName>VP_AUTH_INFRA_SPE</fullName>
        <active>true</active>
        <label>VP-AUTH-INFRA-SPE</label>
    </recordTypes>
    <recordTypes>
        <fullName>VP_AUTH_SAP</fullName>
        <active>true</active>
        <label>VP-AUTH-SAP</label>
    </recordTypes>
    <recordTypes>
        <fullName>VP_HW</fullName>
        <active>true</active>
        <label>VP-HW</label>
    </recordTypes>
    <recordTypes>
        <fullName>VP_HW_NON</fullName>
        <active>true</active>
        <label>VP-HW-NON</label>
    </recordTypes>
    <recordTypes>
        <fullName>VP_PROJ</fullName>
        <active>true</active>
        <label>VP-PROJ</label>
    </recordTypes>
    <recordTypes>
        <fullName>VP_STAT</fullName>
        <active>true</active>
        <label>VP-STAT</label>
    </recordTypes>
    <recordTypes>
        <fullName>VP_STAT_NON</fullName>
        <active>true</active>
        <label>VP-STAT-NON</label>
    </recordTypes>
    <recordTypes>
        <fullName>VP_SW</fullName>
        <active>true</active>
        <label>VP-SW</label>
    </recordTypes>
    <recordTypes>
        <fullName>VP_SW_NON</fullName>
        <active>true</active>
        <label>VP-SW-NON</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Authorization_Cannot_Edit</fullName>
        <active>true</active>
        <errorConditionFormula>AND(CONTAINS(RecordType.DeveloperName, &apos;Authorization&apos;),
OR(ISPICKVAL( Case__r.Status, &apos;Waiting for Manager Approval&apos;),
ISPICKVAL( Case__r.Status, &apos;Waiting for VP Approval&apos;),
ISPICKVAL( Case__r.Status, &apos;Waiting for Auth Focal Point Approval&apos;),
ISPICKVAL( Case__r.Status, &apos;Waiting for DG Approval&apos;),
ISPICKVAL( Case__r.Status, &apos;In Progress&apos;),
ISPICKVAL( Case__r.Status, &apos;Closed&apos;),
ISPICKVAL( Case__r.Status, &apos;Rejected&apos;),
ISPICKVAL( Case__r.Status, &apos;Cancelled&apos;)),
OR(ISCHANGED( Full_Name__c ), ISCHANGED( Department__c ), ISCHANGED( Detail__c )),
NOT(ISNEW()))</errorConditionFormula>
        <errorMessage>You cannot edit request item</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Hardware_Cannot_Edit</fullName>
        <active>true</active>
        <errorConditionFormula>AND( CONTAINS(RecordType.DeveloperName,&apos;Hardware&apos;),
OR(ISPICKVAL( Case__r.Status, &apos;Waiting for Manager Approval&apos;),
ISPICKVAL( Case__r.Status, &apos;Waiting for VP Approval&apos;),
ISPICKVAL( Case__r.Status, &apos;Waiting for DG Approval&apos;),
ISPICKVAL( Case__r.Status, &apos;Closed&apos;),
ISPICKVAL( Case__r.Status, &apos;Rejected&apos;),
ISPICKVAL( Case__r.Status, &apos;Cancelled&apos;)),
OR(ISCHANGED( New_WinNo__c ), ISCHANGED( Price_Per_Unit__c )),
NOT(ISNEW()))</errorConditionFormula>
        <errorMessage>You cannot edit any information in request item</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Hardware_Inprogress_DG</fullName>
        <active>true</active>
        <errorConditionFormula>AND( CONTAINS(RecordType.DeveloperName,&apos;Hardware&apos;),
ISPICKVAL( Case__r.Status, &apos;In Progress&apos;),
ISCHANGED( Price_Per_Unit__c ),
Case__r.Current_user__c = FALSE,
NOT(ISNEW()))</errorConditionFormula>
        <errorMessage>You can edit only new hardware to install (Win no.)</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Hardware_Inprogress_Requester</fullName>
        <active>true</active>
        <errorConditionFormula>AND( CONTAINS(RecordType.DeveloperName,&apos;Hardware&apos;),
ISPICKVAL( Case__r.Status, &apos;In Progress&apos;),
OR(ISCHANGED( New_WinNo__c ), ISCHANGED( Price_Per_Unit__c )),
Case__r.Current_user__c = TRUE,
NOT(ISNEW()))</errorConditionFormula>
        <errorMessage>You cannot edit information after Submit for Approval</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Incident_Cannot_Edit</fullName>
        <active>true</active>
        <errorConditionFormula>AND(CONTAINS(RecordType.DeveloperName, &apos;Incident&apos;),
OR(ISPICKVAL( Case__r.Status, &apos;In Progress&apos;),
ISPICKVAL( Case__r.Status, &apos;Closed&apos;),
ISPICKVAL( Case__r.Status, &apos;Rejected&apos;),
ISPICKVAL( Case__r.Status, &apos;Cancelled&apos;)),
ISCHANGED( Detail__c ),
NOT(ISNEW()))</errorConditionFormula>
        <errorMessage>You cannot edit request item</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Other_Hardware_DGCheckPrice_DGLead</fullName>
        <active>true</active>
        <errorConditionFormula>AND( RecordType.DeveloperName = &apos;Hardware_Non_Catalog&apos;,
ISPICKVAL( Case__r.Status, &apos;DG Check Price&apos;),
ISCHANGED( New_WinNo__c ),
Case__r.Current_user__c = FALSE,
NOT(ISNEW()))</errorConditionFormula>
        <errorMessage>You can edit price per unit only</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Other_Hardware_DGCheckPrice_Requester</fullName>
        <active>true</active>
        <errorConditionFormula>AND( RecordType.DeveloperName = &apos;Hardware_Non_Catalog&apos;,
ISPICKVAL( Case__r.Status, &apos;DG Check Price&apos;),
OR(ISCHANGED( New_WinNo__c ), ISCHANGED( Price_Per_Unit__c )),
Case__r.Current_user__c = TRUE,
NOT(ISNEW()))</errorConditionFormula>
        <errorMessage>You cannot edit information after Submit for Approval</errorMessage>
    </validationRules>
</CustomObject>